unpackaged/main/default/objects/Patient_Contact__c/Patient_Contact__c.object-meta.xml
<CustomObject>
    <label>Patient Contact</label>
    <nameField>
        <displayFormat>FMH-{0000}</displayFormat>
        <label>Patient Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>