unpackaged/main/default/objects/Patient_Contact__c/fields/Adopted__c.field-meta.xml
<CustomField>
    <fullName>Adopted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adopted?</label>
    <type>Checkbox</type>
</CustomField>