unpackaged/main/default/objects/Patient_Contact__c/fields/Are_They_Ashkenazi_Jewish__c.field-meta.xml
<CustomField>
    <fullName>Are_They_Ashkenazi_Jewish__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For certain conditions, such as ovarian and breast cancer, it is important to know if a person has Ashkenazi Jewish heritage for risk assessment purposes.</inlineHelpText>
    <label>Are They Ashkenazi Jewish?</label>
    <type>Checkbox</type>
</CustomField>