unpackaged/main/default/objects/Patient_Contact__c/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <description>Used to calculate an estimated age</description>
    <label>Birth Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>