unpackaged/main/default/objects/Patient_Contact__c/fields/Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Death__c</fullName>
    <label>Cause of Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>