unpackaged/main/default/objects/Patient_Contact__c/fields/Description_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_Notes__c</fullName>
    <label>Description/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>