unpackaged/main/default/objects/Patient_Contact__c/fields/Estimated_Age_2__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Age_2__c</fullName>
    <description>Used, if Birth Year is not entered, to calculate Birth Year</description>
    <label>Estimated Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>