unpackaged/main/default/objects/Patient_Contact__c/fields/Estimated_Age_at_Death__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Age_at_Death__c</fullName>
    <label>Estimated Age at Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age_Range</valueSetName>
    </valueSet>
</CustomField>