unpackaged/main/default/objects/Patient_Contact__c/fields/Is_this_person_living__c.field-meta.xml
<CustomField>
    <fullName>Is_this_person_living__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this person living?</label>
    <type>Checkbox</type>
</CustomField>