unpackaged/main/default/objects/Patient_Contact__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <description>Field to hold Mailing details for patient contact</description>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>