unpackaged/main/default/objects/Patient_Contact__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <description>Field to hold Mailing details for patient contact</description>
    <label>Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>