unpackaged/main/default/objects/Patient_Contact__c/fields/Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province__c</fullName>
    <description>Field to hold Mailing details for patient contact</description>
    <label>Mailing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>