unpackaged/main/default/objects/Patient_Contact__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <description>Field to hold Mailing details for patient contact</description>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>