unpackaged/main/default/objects/Patient_Contact__c/fields/Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code__c</fullName>
    <description>Field to hold Mailing details for patient contact</description>
    <label>Mailing Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>