unpackaged/main/default/objects/Patient_Contact__c/fields/Name_with_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Name_with_Relationship__c</fullName>
    <description>Display the family member&apos;s name followed the the relationship in brackets, if a relationship value has been selected</description>
    <formula>Family_Member_Name__c +
IF(ISBLANK(TEXT(Relationship__c)),
  &quot;&quot;,
  &quot; (&quot; + TEXT(Relationship__c) + &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name with Relationship</label>
    <type>Text</type>
</CustomField>