unpackaged/main/default/objects/Patient_Contact__c/fields/Race_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Race_Picklist__c</fullName>
    <description>Race multi-picklist set for patient contacts</description>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race</valueSetName>
    </valueSet>
</CustomField>