unpackaged/main/default/objects/Patient_Contact__c/fields/Related_through_family_member__c.field-meta.xml
<CustomField>
    <fullName>Related_through_family_member__c</fullName>
    <label>Related through family member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship</valueSetName>
    </valueSet>
</CustomField>