unpackaged/main/default/objects/Patient_Contact__c/fields/Was_this_person_born_a_twin_multiple__c.field-meta.xml
<CustomField>
    <fullName>Was_this_person_born_a_twin_multiple__c</fullName>
    <label>Was this person born a twin / multiple?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Twin</fullName>
            </value>
            <value>
                <fullName>Yes, Identical Twin</fullName>
            </value>
            <value>
                <fullName>Yes, Not Identical Twin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>