unpackaged/main/default/objects/Patient_Contact__c/recordTypes/Family_Medical_History.recordType-meta.xml
<RecordType>
    <fullName>Family_Medical_History</fullName>
    <active>true</active>
    <description>Record type to store Family Medical History related to Patient</description>
    <label>Family Medical History</label>
</RecordType>