unpackaged/main/default/objects/Patient_Contact__c/recordTypes/Supporter_Caregiver.recordType-meta.xml
<RecordType>
    <fullName>Supporter_Caregiver</fullName>
    <active>true</active>
    <description>Record type to store Supporter/Caregiver/Other contacts related to Patient</description>
    <label>Supporter/Caregiver</label>
</RecordType>